# bevy_mobile_pbr

./: Cargo.toml  README.md
assets/shaders/: mobile_pbr_fragment.wgsl  mobile_pbr_material.wgsl
src/: lib.rs
