[package]
name = "bevy_mobile_pbr"
version = "0.1.0"
edition = "2021"
description = "Example for custom pbr material Android app with Bevy"
publish = false
license = "MIT OR Apache-2.0"

[lib]
name = "bevy_mobile_pbr"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy = { version = "0.13.0"}

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[package.metadata.android]
package = "org.bevyengine.example"
apk_name = "bevyexample"
assets = "./assets"
resources = "./assets/android-res"
# This strips debug symbols from the shared libraries, drastically reducing APK size. If you need them, remove the option.
strip = "strip"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 29

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Bevy Moblie PBR"
